tests/negative/test_expr_eval_div_by_zero_unsigned.orb
fnc main () () {
    sym (x (/ 1:u32 0:u32));
};